<resources>
    <string name="app_name">SmartBrightness</string>
    <string name="permission_granted_shizuku">Shizuku permission granted</string>
    <string name="permission_granted_root">Root permission granted</string>
    <string name="permission_denied_shizuku">Shizuku permission denied</string>
    <string name="permission_denied_root">Root permission denied</string>
    <string name="notification_channel_name">Brightness monitor</string>
    <string name="notification_title">Auto Brightness Assistant Running</string>
    <string name="notification_text">Monitoring ambient light</string>
    <string name="service_master_switch">Master switch</string>
    <string name="service_status_label">Service status: %1$s</string>
    <string name="service_status_icon_description">Service status</string>
    <string name="service_status_placeholder">Service status: checking</string>
    <string name="service_status_running">running</string>
    <string name="service_status_stopped">stopped</string>
    <string name="service_status_disabled">disabled</string>
    <string name="service_mode_label">Mode：%1$s</string>
    <string name="page_settings">Settings</string>
    <string name="page_logs">Logs</string>
    <string name="threshold_label">Ambient light threshold:</string>
    <string name="threshold_input_hint">Enter threshold lux</string>
    <string name="threshold_invalid">Invalid threshold</string>
    <string name="execution_mode">Execution mode</string>
    <string name="mode_hint">Select mode</string>
    <string name="mode_shizuku">Shizuku</string>
    <string name="mode_root">Root</string>
    <string name="refresh_logs">Refresh logs</string>
    <string name="clear_logs">Clear logs</string>
    <string name="no_logs">No logs</string>
    <string name="shizuku_error">Shizuku error</string>
    <string name="shizuku_not_running">Shizuku is not running</string>
    <string name="home">Home</string>
    <string name="logs">Logs</string>
    <string name="interval_label">Check interval(ms):</string>
    <string name="interval_input_hint">Enter check interval</string>
    <string name="interval_invalid">Invalid interval</string>
    <string name="interval_check_toast">Check interval set to %1$s ms</string>
    <string name="interval_check_disabled_toast">Timed check disabled</string>
    <string name="check">Check</string>
    <string name="notification_permission_request_title">Request notification permission</string>
    <string name="notification_permission_granted_title">Notification permission granted</string>
    <string name="notification_permission_desc">Notification permission is required to indicate the status of the service</string>
    <string name="auto_restore_label">Auto-Restore brightness</string>
    <string name="auto_restore_desc">Restore brightness when light returns</string>
    <string name="auto_restore_mode">Auto-Restore mode</string>
    <string name="auto_restore_mode_0">Around</string>
    <string name="auto_restore_mode_1">Below</string>
    <string name="auto_restore_below_hint">Enter lux</string>
    <string name="auto_restore_below_label">Below ambient:</string>
    <string name="set_successful">Set successful</string>
    <string name="warning_miui">If you are using MIUI/HyperOS, please set the battery saver to No Restrictions and lock the app in the background.</string>
    <string name="exit_and_hide">Exit and hide in multi-task</string>
    <string name="info">Info</string>
    <string name="github">Github</string>
    <string name="app_author">OneDongua</string>
</resources>
